--- a/arch/arm64/configs/pipa_defconfig
+++ b/arch/arm64/configs/pipa_defconfig
@@ -116,6 +116,7 @@ CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_GOV_TEO=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
+CONFIG_CPU_FREQ_GOV_SCHEDHORIZON=y
 CONFIG_SCHEDUTIL_UP_RATE_LIMIT=4000
 CONFIG_SCHEDUTIL_DOWN_RATE_LIMIT=16000
 CONFIG_ARM_QCOM_CPUFREQ_HW=y
