--- a/arch/arm64/configs/pipa_defconfig
+++ b/arch/arm64/configs/pipa_defconfig
@@ -83,6 +83,7 @@ CONFIG_NR_CPUS=8
 CONFIG_SECCOMP=y
 CONFIG_HARDEN_BRANCH_PREDICTOR=y
 # CONFIG_UNMAP_KERNEL_AT_EL0 is not set
+# CONFIG_HARDEN_EL2_VECTORS is not set
 CONFIG_ARM64_SSBD=y
 CONFIG_ARMV8_DEPRECATED=y
 CONFIG_SWP_EMULATION=y
