--- a/arch/arm64/configs/pipa_defconfig
+++ b/arch/arm64/configs/pipa_defconfig
@@ -42,6 +42,7 @@ CONFIG_BLK_DEV_INITRD=y
 # CONFIG_RD_LZO is not set
 # CONFIG_RD_LZ4 is not set
 # CONFIG_FHANDLE is not set
+CONFIG_LD_DEAD_CODE_DATA_ELIMINATION=y
 CONFIG_BPF_SYSCALL=y
 CONFIG_BPF_JIT_ALWAYS_ON=y
 CONFIG_EMBEDDED=y
