pipa_defconfig: Panic on RCU stalls
We're undeniably dead if there's an RCU stall since we have PREEMPT
enabled. We should panic in this case so the user doesn't have to
manually reset.

Signed-off-by: Sultan Alsawaf <sultan@kerneltoast.com>

--- a/arch/arm64/configs/pipa_defconfig
+++ b/arch/arm64/configs/pipa_defconfig
@@ -739,4 +739,5 @@ CONFIG_MAGIC_SYSRQ=y
 CONFIG_PANIC_TIMEOUT=-1
 CONFIG_STACKTRACE=y
 # CONFIG_RUNTIME_TESTING_MENU is not set
+CONFIG_RCU_PANIC_ON_STALL=1
 CONFIG_TECHPACK_CAMERA_XIAOMI_TABLET=y
