--- a/arch/arm64/configs/pipa_defconfig
+++ b/arch/arm64/configs/pipa_defconfig
@@ -2,7 +2,7 @@ CONFIG_LOCALVERSION="-Utziacre"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
-CONFIG_PREEMPT=y
+CONFIG_PREEMPT_RT_FULL=y
 CONFIG_IRQ_TIME_ACCOUNTING=y
 CONFIG_PELT_UTIL_HALFLIFE_16=y
 CONFIG_TASKSTATS=y
@@ -10,7 +10,7 @@ CONFIG_TASK_DELAY_ACCT=y
 CONFIG_TASK_XACCT=y
 CONFIG_TASK_IO_ACCOUNTING=y
 CONFIG_RCU_EXPERT=y
-CONFIG_RCU_FAST_NO_HZ=y
+# CONFIG_RCU_BOOST is not set
 CONFIG_RCU_NOCB_CPU=y
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
@@ -49,7 +49,6 @@ CONFIG_PERF_EVENTS=y
 # CONFIG_VM_EVENT_COUNTERS is not set
 # CONFIG_SLUB_DEBUG is not set
 # CONFIG_COMPAT_BRK is not set
-# CONFIG_SLUB_CPU_PARTIAL is not set
 CONFIG_SLAB_FREELIST_RANDOM=y
 CONFIG_SLAB_FREELIST_HARDENED=y
 # CONFIG_ZONE_DMA32 is not set
@@ -108,12 +107,6 @@ CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_SCHEDUTIL_UP_RATE_LIMIT=4000
 CONFIG_SCHEDUTIL_DOWN_RATE_LIMIT=16000
 CONFIG_ARM_QCOM_CPUFREQ_HW=y
-CONFIG_CRYPTO_SHA1_ARM64_CE=y
-CONFIG_CRYPTO_SHA2_ARM64_CE=y
-CONFIG_CRYPTO_GHASH_ARM64_CE=y
-CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
-CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
-CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_LTO_CLANG=y
 # CONFIG_THINLTO is not set
 CONFIG_PANIC_ON_REFCOUNT_ERROR=y
@@ -639,7 +632,6 @@ CONFIG_QCOM_EUD=y
 CONFIG_QCOM_FSA4480_I2C=y
 CONFIG_QCOM_WATCHDOG_V2=y
 CONFIG_QCOM_INITIAL_LOGBUF=y
-CONFIG_QCOM_FORCE_WDOG_BITE_ON_PANIC=y
 CONFIG_QCOM_BUS_SCALING=y
 CONFIG_QCOM_BUS_CONFIG_RPMH=y
 CONFIG_MSM_SPCOM=y
@@ -721,6 +713,7 @@ CONFIG_STATIC_USERMODEHELPER_PATH="/system/bin/micd"
 CONFIG_SECURITY_SELINUX=y
 # CONFIG_SECURITY_SELINUX_AVC_STATS is not set
 # CONFIG_INTEGRITY is not set
+CONFIG_CRYPTO_CRYPTD=y
 CONFIG_CRYPTO_CCM=y
 CONFIG_CRYPTO_GCM=y
 CONFIG_CRYPTO_CHACHA20POLY1305=y
@@ -731,6 +724,8 @@ CONFIG_CRYPTO_ANSI_CPRNG=y
 CONFIG_CRYPTO_DEV_QCOM_MSM_QCE=y
 CONFIG_CRYPTO_DEV_QCRYPTO=y
 CONFIG_CRYPTO_DEV_QCEDEV=y
+CONFIG_CRYPTO_SHA256_ARM64=y
+CONFIG_CRYPTO_AES_ARM64=y
 CONFIG_PRINTK_TIME=y
 # CONFIG_PRINTK_CPU_ID is not set
 # CONFIG_PRINTK_PID is not set
