ARM64: Import HWCONF_MANAGER driver
 - HWCONF_MANAGER helps to provide all kinds of components configuration information and monitor values.

Signed-off-by: kawaaii <kawaaii@nocturn9x.space>
Change-Id: I3cbd92606fe2dfa01059407efd1ccd8b1a462764

--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -1679,3 +1679,10 @@ source "arch/arm64/kvm/Kconfig"
 if CRYPTO
 source "arch/arm64/crypto/Kconfig"
 endif
+
+config HWCONF_MANAGER
+	bool "Hardware configuration and monitor information"
+	default y
+	help
+	  It provides all kinds of components configuration information and
+	  monitor values.
