configs: Enable `EroFs`
* Don't ask me about lmi defconfig cause my reaction was the same

Signed-off-by: NotZeetaa <rodrigo2005contente@gmail.com>

--- a/arch/arm64/configs/lmi_defconfig
+++ b/arch/arm64/configs/lmi_defconfig
@@ -394,11 +394,8 @@ CONFIG_SPI=y
 CONFIG_SPI_QCOM_GENI=y
 CONFIG_SPI_SPIDEV=y
 CONFIG_SPMI=y
-<<<<<<< HEAD
 CONFIG_SPMI_MSM_PMIC_ARB_DEBUG=y
 CONFIG_PINCTRL_SX150X=y
-=======
->>>>>>> 94ef584f4531 (ARM64: configs: Remove some debugging related features)
 CONFIG_PINCTRL_QCOM_SPMI_PMIC=y
 CONFIG_PINCTRL_KONA=y
 CONFIG_GPIO_SYSFS=y
@@ -692,6 +689,7 @@ CONFIG_ESOC_MDM_DRV=y
 CONFIG_SENSORS_SSC=y
 CONFIG_QCOM_KGSL=y
 CONFIG_EXT4_FS=y
+CONFIG_EROFS_FS=y
 CONFIG_EXT4_FS_POSIX_ACL=y
 CONFIG_EXT4_FS_SECURITY=y
 CONFIG_EXT4_ENCRYPTION=y
