--- a/arch/arm64/configs/apollo_defconfig
+++ b/arch/arm64/configs/apollo_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-perf"
+CONFIG_LOCALVERSION="-Nexus-apollo-v2"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
