--- a/arch/arm64/configs/lmi_defconfig
+++ b/arch/arm64/configs/lmi_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-perf"
+CONFIG_LOCALVERSION="-Nexus-lmi-v18"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
