--- a/.ci.yml
+++ b/.ci.yml
@@ -2,18 +2,66 @@
 clone: 
   depth: 1
 kind: pipeline
-name : xKernel Compiler
-version: rev1.5_template
+name : Nexus Lmi FW12
+version: lmi
 steps:
- - name: xKernel Compilation
-   image: panchajanya1999/archlinux:latest
+ - name: Nexus Lmi FW12
+   image: nexgang/ubuntu:latest
    environment:
      token:
        from_secret: token
      chat_id:
        from_secret: chat_id
    commands:
-     - curl -fsSL "https://pkgbuild.com/~morganamilo/pacman-static/x86_64/bin/pacman-static" -o pacman-static && chmod +x pacman-static && mv pacman-static /usr/bin/
-     - pacman-static -Syu --needed --noconfirm dpkg
-     - wget http://archive.ubuntu.com/ubuntu/pool/main/n/ncurses/libtinfo5_6.0+20160213-1ubuntu1_amd64.deb -O libtinfo5.deb && dpkg-deb -R libtinfo5.deb libtinfo && cp libtinfo/lib/x86_64-linux-gnu/libtinfo.so.5.9 /usr/lib/libtinfo.so.5
-     - bash build.sh && bash build2.sh
+     - /noclone3 bash build.sh null lmi
+     
+--- 
+clone: 
+  depth: 1
+kind: pipeline
+name : Nexus Alioth
+version: alioth
+steps:
+ - name: Nexus Alioth
+   image: nexgang/ubuntu:latest
+   environment:
+     token:
+       from_secret: token
+     chat_id:
+       from_secret: chat_id
+   commands:
+     - /noclone3 bash build.sh null alioth
+
+--- 
+clone: 
+  depth: 1
+kind: pipeline
+name : Nexus Lmi FW13
+version: lmi
+steps:
+ - name: Nexus Lmi FW13
+   image: nexgang/ubuntu:latest
+   environment:
+     token:
+       from_secret: token
+     chat_id:
+       from_secret: chat_id
+   commands:
+     - /noclone3 bash build.sh null fw13
+
+--- 
+clone: 
+  depth: 1
+kind: pipeline
+name : Nexus Apollo
+version: apollo
+steps:
+ - name: Nexus Apollo
+   image: nexgang/ubuntu:latest
+   environment:
+     token:
+       from_secret: token
+     chat_id:
+       from_secret: chat_id
+   commands:
+     - /noclone3 bash build.sh null apollo
