arm64: Don't build BOOT_INFO for now
Signed-off-by: NotZeetaa <rodrigo2005contente@gmail.com>

--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -1580,7 +1580,7 @@ config KRYO_PMU_WORKAROUND
 
 config BOOT_INFO
 	bool "Boot information from bootloader"
-	default y
+	default n
 	help
 	  On embedded linux device, we try to collect more information from
 	  bootloader to kernel. eg. powerup reason.
