--- a/arch/arm64/configs/apollo_defconfig
+++ b/arch/arm64/configs/apollo_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-IMMENSITY-X"
+CONFIG_LOCALVERSION="-Nexus-apollo-v2"
 CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
