configs: Enable & configure schedhorizon CPU governor
[NotZeetaa: Adapted to our eff freqs]

--- a/arch/arm64/configs/lmi_defconfig
+++ b/arch/arm64/configs/lmi_defconfig
@@ -114,6 +114,13 @@ CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_SCHEDHORIZON=y
+CONFIG_SCHEDHORIZON_DEFAULT_EFFICIENT_FREQ_LP=1708800
+CONFIG_SCHEDHORIZON_DEFAULT_EFFICIENT_FREQ_HP=1766400
+CONFIG_SCHEDHORIZON_DEFAULT_EFFICIENT_FREQ_PR=2073600
+CONFIG_SCHEDHORIZON_DEFAULT_UP_DELAY_LP=200
+CONFIG_SCHEDHORIZON_DEFAULT_UP_DELAY_HP=200
+CONFIG_SCHEDHORIZON_DEFAULT_UP_DELAY_PR=200
 CONFIG_ARM_QCOM_CPUFREQ_HW=y
 CONFIG_CRYPTO_SHA1_ARM64_CE=y
 CONFIG_CRYPTO_SHA2_ARM64_CE=y
