--- a/arch/arm64/configs/munch_defconfig
+++ b/arch/arm64/configs/munch_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-Nexus-munch-v1"
+CONFIG_LOCALVERSION="-Nexus-munch-v2-rc-1.0"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
