configs: Enable `Polly Clang`
Signed-off-by: NotZeetaa <rodrigo2005contente@gmail.com>

--- a/arch/arm64/configs/alioth_defconfig
+++ b/arch/arm64/configs/alioth_defconfig
@@ -1,5 +1,6 @@
 CONFIG_LOCALVERSION="-Nexus-alioth-v10-rc-4.0"
 # CONFIG_LOCALVERSION_AUTO is not set
+CONFIG_POLLY_CLANG=y
 CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
