--- a/arch/arm64/configs/apollo_defconfig
+++ b/arch/arm64/configs/apollo_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-Nexus-apollo-v4-rc-4.0"
+CONFIG_LOCALVERSION="-Nexus-apollo-v4"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_POLLY_CLANG=y
 CONFIG_AUDIT=y
