--- a/arch/arm64/configs/munch_defconfig
+++ b/arch/arm64/configs/munch_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-Nexus-munch-v2-rc-4.0"
+CONFIG_LOCALVERSION="-Nexus-munch-v2-rc"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_POLLY_CLANG=y
 CONFIG_AUDIT=y
