--- a/arch/arm64/configs/lmi_defconfig
+++ b/arch/arm64/configs/lmi_defconfig
@@ -15,7 +15,7 @@ CONFIG_TASK_XACCT=y
 CONFIG_TASK_IO_ACCOUNTING=y
 CONFIG_HAVE_MOVE_PUD=y
 CONFIG_HAVE_MOVE_PMD=y
-CONFIG_PSI=y
+# CONFIG_PSI is not set
 CONFIG_RCU_EXPERT=y
 CONFIG_RCU_FAST_NO_HZ=y
 CONFIG_RCU_NOCB_CPU=y
@@ -25,8 +25,10 @@ CONFIG_IKCONFIG_PROC=y
 CONFIG_LOG_BUF_SHIFT=21
 CONFIG_LOG_CPU_MAX_BUF_SHIFT=17
 CONFIG_MACH_XIAOMI_LMI=y
-CONFIG_MEMCG=y
-CONFIG_MEMCG_SWAP=y
+# CONFIG_MEMCG is not set
+# CONFIG_MEMCG_SWAP is not set
+CONFIG_ANDROID_SIMPLE_LMK=y
+CONFIG_ANDROID_SIMPLE_LMK_TIMEOUT_MSEC=120
 CONFIG_BLK_CGROUP=y
 CONFIG_CGROUP_FREEZER=y
 CONFIG_CPUSETS=y
