configs: Disable `Damon`
Signed-off-by: NotZeetaa <rodrigo2005contente@gmail.com>

--- a/arch/arm64/configs/lmi_defconfig
+++ b/arch/arm64/configs/lmi_defconfig
@@ -159,7 +159,7 @@ CONFIG_CMA=y
 CONFIG_CMA_AREAS=16
 CONFIG_ZSMALLOC=y
 CONFIG_MM_EVENT_STAT=y
-CONFIG_DAMON=y
+# CONFIG_DAMON is not set
 CONFIG_DAMON_VADDR=y
 CONFIG_DAMON_PADDR=y
 CONFIG_DAMON_RECLAIM=y
