tree: Alioth Miui changes
Signed-off-by: NotZeetaa <rodrigo2005contente@gmail.com>

--- a/arch/arm64/configs/alioth_defconfig
+++ b/arch/arm64/configs/alioth_defconfig
@@ -163,6 +163,7 @@ CONFIG_DAMON_PADDR=y
 CONFIG_DAMON_RECLAIM=y
 CONFIG_NET=y
 CONFIG_PACKET=y
+# CONFIG_TOUCHSCREEN_COMMON is not set
 CONFIG_UNIX=y
 CONFIG_XFRM_USER=y
 CONFIG_XFRM_INTERFACE=y
@@ -644,6 +645,22 @@ CONFIG_QCOM_SECURE_BUFFER=y
 CONFIG_MSM_SERVICE_LOCATOR=y
 CONFIG_MSM_SERVICE_NOTIFIER=y
 CONFIG_MSM_SUBSYSTEM_RESTART=y
+CONFIG_BOOT_INFO=y
+CONFIG_BINDER_OPT=y
+CONFIG_IPC_LOGGING=y
+CONFIG_KPERFEVENTS=y
+CONFIG_MIGT=y
+CONFIG_MIGT_ENERGY_MODEL=y
+CONFIG_MIHW=y
+CONFIG_MILLET=y
+CONFIG_MI_DRM_OPT=y
+CONFIG_MIUI_ZRAM_MEMORY_TRACKING=y
+CONFIG_MI_RECLAIM=y
+CONFIG_PACKAGE_RUNTIME_INFO=y
+CONFIG_PERF_HUMANTASK=y
+CONFIG_PERF_CRITICAL_RT_TASK=y
+CONFIG_SF_BINDER=y
+CONFIG_TASK_DELAY_ACCT=y
 CONFIG_MSM_PIL=y
 CONFIG_MSM_SYSMON_QMI_COMM=y
 CONFIG_MSM_PIL_SSR_GENERIC=y
