--- a/arch/arm64/configs/lmi_defconfig
+++ b/arch/arm64/configs/lmi_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-Nexus-lmi-v20-rc"
+CONFIG_LOCALVERSION="-Nexus-lmi-v20"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_POLLY_CLANG=y
 CONFIG_AUDIT=y
