--- a/arch/arm64/configs/alioth_defconfig
+++ b/arch/arm64/configs/alioth_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-Nexus-alioth-v11-rc-1.0"
+CONFIG_LOCALVERSION="-Nexus-alioth-v11"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_POLLY_CLANG=y
 CONFIG_AUDIT=y
