--- a/arch/arm64/configs/munch_defconfig
+++ b/arch/arm64/configs/munch_defconfig
@@ -1,7 +1,7 @@
 CONFIG_LOCALVERSION="-Nexus-munch-v4-rc-1.0"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_POLLY_CLANG=y
-CONFIG_AUDIT=y
+# CONFIG_AUDIT is not set
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_PREEMPT=y
