configs: Make SLMK a bit aggressive
- Set minfree to 115 MiB.
- Set timeout to 110 msec.

Signed-off-by: Tashfin Shakeer Rhythm <tashfinshakeerrhythm@gmail.com>

--- a/arch/arm64/configs/alioth_defconfig
+++ b/arch/arm64/configs/alioth_defconfig
@@ -1,7 +1,7 @@
 CONFIG_LOCALVERSION="-Nexus-alioth-v12-rc-1.0"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_POLLY_CLANG=y
-# CONFIG_AUDIT is not set
+# CONFIG_AUDIT is not se
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_PREEMPT=y
@@ -27,7 +27,8 @@ CONFIG_LOG_CPU_MAX_BUF_SHIFT=17
 # CONFIG_MEMCG is not set
 # CONFIG_MEMCG_SWAP is not set
 CONFIG_ANDROID_SIMPLE_LMK=y
-CONFIG_ANDROID_SIMPLE_LMK_TIMEOUT_MSEC=120
+CONFIG_ANDROID_SIMPLE_LMK_MINFREE=115
+CONFIG_ANDROID_SIMPLE_LMK_TIMEOUT_MSEC=110
 CONFIG_BLK_CGROUP=y
 CONFIG_CGROUP_FREEZER=y
 CONFIG_CPUSETS=y
