--- a/arch/arm64/configs/apollo_defconfig
+++ b/arch/arm64/configs/apollo_defconfig
@@ -156,6 +156,18 @@ CONFIG_DEFAULT_MMAP_MIN_ADDR=32768
 CONFIG_CMA=y
 CONFIG_CMA_AREAS=16
 CONFIG_ZSMALLOC=y
+CONFIG_FRONTSWAP=y
+CONFIG_ZSWAP=y
+CONFIG_ZPOOL=y
+CONFIG_ZBUD=y
+CONFIG_Z3FOLD=y
+CONFIG_DIRECT_RECLAIM_FILE_PAGES_ONLY=y
+CONFIG_INCREASE_MAXIMUM_SWAPPINESS=y
+CONFIG_FIX_INACTIVE_RATIO=y
+# CONFIG_SWAP_ENABLE_READAHEAD is not set
+CONFIG_VBSWAP=y
+CONFIG_VBSWAP_HELPER=y
+CONFIG_BTREE=y
 CONFIG_MM_EVENT_STAT=y
 # CONFIG_DAMON is not set
 CONFIG_DAMON_VADDR=y
@@ -348,7 +360,7 @@ CONFIG_MTD=y
 CONFIG_MTD_BLOCK=y
 CONFIG_MTD_OOPS=y
 CONFIG_MTD_BLOCK2MTD=y
-CONFIG_ZRAM=y
+# CONFIG_ZRAM is not set
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=16
 CONFIG_BLK_DEV_RAM=y
@@ -753,8 +765,7 @@ CONFIG_SECURITY=y
 CONFIG_SECURITY_NETWORK=y
 CONFIG_HARDENED_USERCOPY=y
 CONFIG_FORTIFY_SOURCE=y
-CONFIG_STATIC_USERMODEHELPER=y
-CONFIG_STATIC_USERMODEHELPER_PATH=""
+# CONFIG_STATIC_USERMODEHELPER is not set
 CONFIG_SECURITY_SELINUX=y
 CONFIG_INIT_ON_ALLOC_DEFAULT_ON=y
 CONFIG_CRYPTO_CCM=y
