--- a/arch/arm64/configs/pipa_defconfig
+++ b/arch/arm64/configs/pipa_defconfig
@@ -662,6 +662,9 @@ CONFIG_DEVFREQ_GOV_QCOM_BW_HWMON=y
 CONFIG_DEVFREQ_GOV_QCOM_CACHE_HWMON=y
 CONFIG_DEVFREQ_GOV_MEMLAT=y
 CONFIG_DEVFREQ_GOV_CDSPL3=y
+CONFIG_DEVFREQ_BOOST=y
+CONFIG_DEVFREQ_INPUT_BOOST_DURATION_MS=58
+CONFIG_DEVFREQ_CPU_LLCC_DDR_BW_BOOST_FREQ=3879
 CONFIG_ARM_QCOM_DEVFREQ_FW=y
 CONFIG_DEVFREQ_SIMPLE_DEV=y
 CONFIG_QCOM_DEVFREQ_DEVBW=y
