--- a/arch/arm64/configs/pipa_defconfig
+++ b/arch/arm64/configs/pipa_defconfig
@@ -106,6 +106,7 @@ CONFIG_PM_WAKELOCKS_LIMIT=0
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_ENERGY_MODEL=y
 CONFIG_CPU_IDLE=y
+CONFIG_CPU_IDLE_GOV_TEO=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_SCHEDUTIL_UP_RATE_LIMIT=4000
