--- a/arch/arm64/configs/pipa_defconfig
+++ b/arch/arm64/configs/pipa_defconfig
@@ -1,5 +1,8 @@
 CONFIG_LOCALVERSION="-Utziacre"
 # CONFIG_LOCALVERSION_AUTO is not set
+CONFIG_IRQ_SBALANCE=y
+CONFIG_SBALANCE_EXCLUDE_CPUS="6,7"
+CONFIG_IRQ_SBALANCE_POLL_MSEC=3000
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_PREEMPT_RT_FULL=y
