--- a/arch/arm64/configs/pipa_defconfig
+++ b/arch/arm64/configs/pipa_defconfig
@@ -29,6 +29,7 @@ CONFIG_CGROUP_CPUACCT=y
 CONFIG_CGROUP_BPF=y
 CONFIG_NAMESPACES=y
 # CONFIG_PID_NS is not set
+CONFIG_SCHED_CASS=y
 CONFIG_SCHED_AUTOGROUP=y
 CONFIG_UCLAMP_ASSIST=y
 CONFIG_CPUSET_ASSIST=y
