--- a/arch/arm64/configs/pipa_defconfig
+++ b/arch/arm64/configs/pipa_defconfig
@@ -117,6 +117,7 @@ CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_LTO_CLANG=y
+# CONFIG_THINLTO is not set
 CONFIG_PANIC_ON_REFCOUNT_ERROR=y
 # CONFIG_VMAP_STACK is not set
 CONFIG_BLK_INLINE_ENCRYPTION=y
