--- a/arch/arm64/configs/pipa_defconfig
+++ b/arch/arm64/configs/pipa_defconfig
@@ -18,6 +18,9 @@ CONFIG_IKCONFIG_PROC=y
 CONFIG_LOG_CPU_MAX_BUF_SHIFT=17
 CONFIG_MEMCG=y
 CONFIG_MEMCG_SWAP=y
+CONFIG_UCLAMP_TASK=y
+CONFIG_UCLAMP_TASK_GROUP=y
+CONFIG_UCLAMP_BUCKETS_COUNT=20
 CONFIG_BLK_CGROUP=y
 CONFIG_CGROUP_FREEZER=y
 CONFIG_CPUSETS=y
@@ -26,7 +29,6 @@ CONFIG_CGROUP_BPF=y
 CONFIG_NAMESPACES=y
 # CONFIG_PID_NS is not set
 CONFIG_SCHED_AUTOGROUP=y
-CONFIG_SCHED_TUNE=y
 CONFIG_CPUSET_ASSIST=y
 CONFIG_CPUSET_AUDIO_APP="0-3"
 CONFIG_CPUSET_CAMERA="0-3"
