--- a/arch/arm64/configs/alioth_defconfig
+++ b/arch/arm64/configs/alioth_defconfig
@@ -809,3 +809,4 @@ CONFIG_CORESIGHT_AMBA_PLACEHOLDER=y
 # CONFIG_DEBUG_KERNEL is not set
 # CONFIG_ARM64_PAN is not set
 CONFIG_JUMP_LABEL=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
