--- a/arch/arm64/configs/alioth_defconfig
+++ b/arch/arm64/configs/alioth_defconfig
@@ -62,7 +62,6 @@ CONFIG_PCI_MSM_MSI=y
 CONFIG_SCHED_MC=y
 CONFIG_NR_CPUS=8
 CONFIG_SECCOMP=y
-CONFIG_OKL4_GUEST=y
 # CONFIG_UNMAP_KERNEL_AT_EL0 is not set
 CONFIG_ARM64_SSBD=y
 CONFIG_ARMV8_DEPRECATED=y
@@ -119,9 +118,6 @@ CONFIG_CFQ_GROUP_IOSCHED=y
 # CONFIG_MQ_IOSCHED_DEADLINE is not set
 # CONFIG_MQ_IOSCHED_KYBER is not set
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
-CONFIG_MEMORY_HOTPLUG=y
-CONFIG_MEMORY_HOTPLUG_DEFAULT_ONLINE=y
-CONFIG_MEMORY_HOTPLUG_MOVABLE_NODE=y
 CONFIG_MEMORY_HOTREMOVE=y
 CONFIG_CMA=y
 CONFIG_CMA_AREAS=16
@@ -304,7 +300,6 @@ CONFIG_QSEECOM=y
 CONFIG_UID_SYS_STATS=y
 CONFIG_OKL4_USER_VIRQ=y
 CONFIG_WIGIG_SENSING_SPI=m
-CONFIG_QTI_XR_SMRTVWR_MISC=y
 CONFIG_QTI_MAXIM_FAN_CONTROLLER=y
 CONFIG_KINECTICS_XR_NORDIC=y
 CONFIG_SCSI=y
@@ -347,7 +342,6 @@ CONFIG_PPPOL2TP=y
 CONFIG_USB_RTL8152=y
 CONFIG_USB_LAN78XX=y
 CONFIG_USB_USBNET=y
-CONFIG_WIL6210=m
 CONFIG_WCNSS_MEM_PRE_ALLOC=y
 CONFIG_CLD_LL_CORE=y
 CONFIG_CNSS2=y
@@ -393,7 +387,6 @@ CONFIG_SPI_QCOM_GENI=y
 CONFIG_SPI_SPIDEV=y
 CONFIG_SPMI=y
 CONFIG_SPMI_MSM_PMIC_ARB_DEBUG=y
-CONFIG_PINCTRL_SX150X=y
 CONFIG_PINCTRL_QCOM_SPMI_PMIC=y
 CONFIG_PINCTRL_KONA=y
 CONFIG_GPIO_SYSFS=y
@@ -452,7 +445,6 @@ CONFIG_MSM_GLOBAL_SYNX=y
 CONFIG_DVB_MPQ=m
 CONFIG_DVB_MPQ_DEMUX=m
 CONFIG_DVB_MPQ_SW=y
-CONFIG_VIDEO_V4L2_VIDEOBUF2_CORE=y
 CONFIG_I2C_RTC6226_QCA=y
 CONFIG_DRM=y
 CONFIG_DRM_LONTIUM_LT9611UXC=y
@@ -486,15 +478,12 @@ CONFIG_USB_EHCI_HCD=y
 CONFIG_USB_EHCI_HCD_PLATFORM=y
 CONFIG_USB_OHCI_HCD=y
 CONFIG_USB_OHCI_HCD_PLATFORM=y
-CONFIG_USB_ACM=y
 CONFIG_USB_STORAGE=y
 CONFIG_USB_DWC3=y
 CONFIG_USB_DWC3_MSM=y
 CONFIG_USB_ISP1760=y
 CONFIG_USB_ISP1760_HOST_ROLE=y
-CONFIG_USB_SERIAL=y
-CONFIG_USB_SERIAL_CP210X=y
-CONFIG_USB_SERIAL_FTDI_SIO=y
+CONFIG_USB_CONFIGFS_RNDIS=y
 CONFIG_USB_EHSET_TEST_FIXTURE=y
 CONFIG_USB_LINK_LAYER_TEST=y
 CONFIG_USB_REDRIVER_NB7VPQ904M=y
@@ -561,7 +550,6 @@ CONFIG_IPA_WDI_UNIFIED_API=y
 CONFIG_RMNET_IPA3=y
 CONFIG_RNDIS_IPA=y
 CONFIG_IPA3_MHI_PRIME_MANAGER=y
-CONFIG_MSM_11AD=m
 CONFIG_USB_BAM=y
 CONFIG_QCOM_GENI_SE=y
 CONFIG_IPA3_REGDUMP=y
@@ -572,7 +560,6 @@ CONFIG_MSM_VIDEOCC_KONA=y
 CONFIG_MSM_DISPCC_KONA=y
 CONFIG_MSM_CAMCC_KONA=y
 CONFIG_MSM_GPUCC_KONA=y
-CONFIG_MSM_DEBUGCC_KONA=y
 CONFIG_MSM_NPUCC_KONA=y
 CONFIG_HWSPINLOCK=y
 CONFIG_HWSPINLOCK_QCOM=y
@@ -661,8 +648,6 @@ CONFIG_DEVFREQ_GOV_STATICMAP=y
 CONFIG_EXTCON_USB_GPIO=y
 CONFIG_IIO=y
 CONFIG_QCOM_SPMI_ADC5=y
-CONFIG_CH101_I2C=y
-CONFIG_ADS7052_TDK_THERMISTOR=y
 CONFIG_PWM=y
 CONFIG_PWM_QTI_LPG=y
 CONFIG_QCOM_PDC=y
@@ -740,7 +725,6 @@ CONFIG_PANIC_TIMEOUT=-1
 CONFIG_SCHEDSTATS=y
 # CONFIG_DEBUG_PREEMPT is not set
 CONFIG_DEBUG_LIST=y
-CONFIG_DEBUG_ALIGN_RODATA=y
 CONFIG_BUILD_ARM64_DT_OVERLAY=y
 CONFIG_QCA_CLD_WLAN=y
 CONFIG_QCA_CLD_WLAN_PROFILE="qca6390"
@@ -810,3 +794,5 @@ CONFIG_CORESIGHT_AMBA_PLACEHOLDER=y
 # CONFIG_ARM64_PAN is not set
 CONFIG_JUMP_LABEL=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
+# CONFIG_VT is not set
+CONFIG_NLS_UTF8=y
