pipa_defconfig: Configure custom uname override
Change-Id: I787328b287131bf0aed8e716221a1c9b9bb316c0
Signed-off-by: Yuan Si <do4suki@gmail.com>

--- a/arch/arm64/configs/pipa_defconfig
+++ b/arch/arm64/configs/pipa_defconfig
@@ -1,5 +1,8 @@
 CONFIG_LOCALVERSION="-Utziacre"
 # CONFIG_LOCALVERSION_AUTO is not set
+CONFIG_UNAME_OVERRIDE=y
+CONFIG_UNAME_OVERRIDE_TARGET="com.google.android.gms"
+CONFIG_UNAME_OVERRIDE_STRING="4.19.157-perf+"
 CONFIG_IRQ_SBALANCE=y
 CONFIG_SBALANCE_EXCLUDE_CPUS="6,7"
 CONFIG_IRQ_SBALANCE_POLL_MSEC=3000
