--- a/arch/arm64/configs/alioth_defconfig
+++ b/arch/arm64/configs/alioth_defconfig
@@ -14,7 +14,7 @@ CONFIG_IRQ_SBALANCE_POLL_MSEC=30000
 CONFIG_SBALANCE_EXCLUDE_CPUS="6,7"
 CONFIG_TASK_XACCT=y
 CONFIG_TASK_IO_ACCOUNTING=y
-# CONFIG_PSI is not set
+CONFIG_PSI=y
 CONFIG_RCU_EXPERT=y
 CONFIG_RCU_FAST_NO_HZ=y
 CONFIG_HZ_100=y
@@ -23,9 +23,8 @@ CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
 # CONFIG_IKHEADERS is not set
 CONFIG_LOG_BUF_SHIFT=20
-# CONFIG_MEMCG is not set
-# CONFIG_MEMCG_SWAP is not set
-CONFIG_ANDROID_SIMPLE_LMK=y
+CONFIG_MEMCG=y
+CONFIG_MEMCG_SWAP=y
 CONFIG_BLK_CGROUP=y
 CONFIG_CGROUP_FREEZER=y
 CONFIG_CPUSETS=y
