--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "KernelSU"]
 	path = KernelSU
-	url = https://github.com/Farizmaul/KernelSU
+	url = https://github.com/EmanuelCN/KernelSU
