--- a/arch/arm64/configs/alioth_defconfig
+++ b/arch/arm64/configs/alioth_defconfig
@@ -97,6 +97,7 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_BOOST is not set
 CONFIG_CRYPTO_LZ4=y
 CONFIG_CRYPTO_LZ4KD=y
+CONFIG_ZRAM_DEF_COMP_LZ4KD=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_ARM_QCOM_CPUFREQ_HW=y
 CONFIG_CRYPTO_SHA1_ARM64_CE=y
