--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,12 @@ all.config
 
 # fetched Android config fragments
 kernel/configs/android-*.cfg
+
+# Nexus
+clang/
+clangB/
+gcc/
+gcc32/
+out/
+ids.txt
+error.log
